2024-04-02 v1.6.4
!  Fixed the ability adjusts section. Should now work as intended
!  Fixed fonts for non latin letters and added an option to choose label font
+  Added option to hide tracker and/or progressbar in PVP Zones rather than just plain deactivating the AddOn
+  Added an ability stack tracker for stackable abilities like bound armaments, crux, molten whip or grimm focus and its morphs
+  Added an option to always show your own resources, instead of only when targeting units or in combat
+  Added a label for magicka and options to resize and colorize labels
+  Added option to change bar color on channeling abilities <1 second to indicate possibility to barswap
+  Cleaned up the addon menu by introducing submenus
+  A little bit more order to the code by adding sections

2024-02-02 v1.6.3
!  Hotfix #2

2024-02-01 v1.6.2b
!  Hotfix for AddOn not being able to load

2024-02-01 v1.6.2
!  Fixed: Barswap and block behavior on progress bar
!  Tweaked exhausting fatecarvers extended duration to better match visual effect
+  Brought order into chaos. Cleaned up the code a little and modularized it

2024-01-24 v1.6.1
!  Fixed an bug, where the addon would not load, because of missing dependencies (sorry, my mistake guys)
!  Spell and remaining time label are now properly displayed in cast bar
+  Barswap now also cancels channeling spells
+  Added fancy mode

2024-01-22 v1.6.0
project taken by barny
!  Fixed time adjustment on exhausting fatecarver depending on crux
!  Fixed: Channeled abilities or abilities with cast time are now interrupted by block or dodgeroll
!  Fixed a bug after resizing the cast bar in unlock mode
+  Added options to display remaining time, spell name and spell icon on cast bar for spells with cast/channel time
+  Remaining time label and spell icon now move according to bar alignment
+  Added option to stop HA tracking
+  Added option to show the cast bar permanently

2020-11-03 v1.5.2